Atcoder/ABC過去問/A/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/A/ABC151A.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABC過去問/A/ABC151A.cpp:315:14: error: 'ctoi' was not declared in this scope; did you mean 'atoi'?
  315 |     out(char(ctoi(c)-'a'+1));
      |              ^~~~
      |              atoi
